fix: texto na pagina ranking agora aparece com o contraste

--- a/src/app/component/ranking/ranking.component.scss
+++ b/src/app/component/ranking/ranking.component.scss
@@ -1,5 +1,5 @@
 .titulo {
-  color: var(--font-color);
+  color: var(--input-fontColor);
   font-size: calc(var(--tamanhoFonte) + 5px);
   font-weight: bold;
   text-align: center;
@@ -12,17 +12,18 @@ td {
   font-size: var(--tamanhoFonte);
 }
 .jogadores tr:nth-child(even) {
-  background-color: #e6c7e5;
+  background-color: var(--input-hoverTable);
 }
 
 .jogadores tr:hover {
-  background-color: #e5d7e2;
+  background-color: var(--input-hoverTable);
 }
 
 .jogadores {
   width: 50%;
   margin-right: auto;
   margin-left: auto;
+  color: var(--input-fontColor);
 }
 .ranking {
   display: flex;
@@ -44,6 +45,7 @@ td {
   color: var(--font-color);
   width: fit-content;
   height: fit-content;
+  border-color: var(--input-fontColor);
   border-radius: 30px;
   font-size: var(--tamanhoFonte);
 }
